--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -1,3 +1,4 @@
 {
-   "python.pythonPath": ".venv/bin/python"
+"python.pythonPath": "/home/gitpod/.pyenv/shims/python2",
+"python.linting.pylintEnabled": true
 }
